# term-rewriting-ext

./: .gitignore  LICENSE  README.md  stack-13.20.yaml  stack.yaml  term-rewriting-ext.cabal
src/Data/Rewriting/: Cost.hs  Datatype.hs  Rules.hs  Signature.hs
src/Data/Rewriting/Cost/: Pretty.hs  Type.hs
src/Data/Rewriting/Datatype/: Ops.hs  Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Problem/: Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Rule/: Pretty.hs  Type.hs
src/Data/Rewriting/Rules/: Rewrite.hs
src/Data/Rewriting/Signature/: Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Substitution/: Parse.hs  Unify.hs
src/Data/Rewriting/Term/: Parse.hs
src/Data/Rewriting/Typed/: Context.hs  CriticalPair.hs  Datatype.hs  Pos.hs  Problem.hs  Rule.hs  Rules.hs  Signature.hs  Substitution.hs  Term.hs  Utils.hs
src/Data/Rewriting/Typed/Context/: Ops.hs  Type.hs
src/Data/Rewriting/Typed/CriticalPair/: Ops.hs  Type.hs
src/Data/Rewriting/Typed/Datatype/: Ops.hs  Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Typed/Problem/: Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Typed/Rule/: Ops.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Typed/Rules/: Ops.hs  Rewrite.hs
src/Data/Rewriting/Typed/Signature/: Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Typed/Substitution/: Match.hs  Ops.hs  Parse.hs  Pretty.hs  Type.hs  Unify.hs
src/Data/Rewriting/Typed/Term/: Ops.hs  Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Typed/Utils/: Parse.hs
src/Data/Rewriting/Utils/: Parse.hs
