name:          term-rewriting-ext
version:       0.1.3
stability:     experimental
author:        Martin Avanzini,
               Bertram Felgenhauer,
               Christian Sternagel,
               Ilya Epifanov,
               Manuel Schneckenreither
maintainer:    manuel.schneckenreither@student.uibk.ac.at,
               haskell-rewriting@informatik.uibk.ac.at
license:       MIT
license-file:  LICENSE
category:      Logic
synopsis:      Term Rewriting Library
description:
  Yet Another Term Rewriting Library.
  .
  This library provides basic data types and functionality for first order
  term rewriting.
  .
  This is an extenstion of the term-rewriting library, which can be found at
  http://github.com/haskell-rewriting/term-rewriting. It may be merged in to
  term-rewriting in the future.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
    type: git
    location: git://github.com/schnecki/term-rewriting

library
    hs-source-dirs:
        src
    exposed-modules:
        Data.Rewriting.Term
        Data.Rewriting.Term.Type
        Data.Rewriting.Term.Ops
        Data.Rewriting.Term.Parse
        Data.Rewriting.Term.Pretty
        Data.Rewriting.Pos
        Data.Rewriting.Problem
        Data.Rewriting.Problem.Type
        Data.Rewriting.Problem.Parse
        Data.Rewriting.Problem.Pretty
        Data.Rewriting.Rule
        Data.Rewriting.Rule.Type
        Data.Rewriting.Rule.Pretty
        Data.Rewriting.Rule.Ops
        Data.Rewriting.Substitution
        Data.Rewriting.Substitution.Type
        Data.Rewriting.Substitution.Parse
        Data.Rewriting.Substitution.Ops
        Data.Rewriting.Substitution.Pretty
        Data.Rewriting.Substitution.Match
        Data.Rewriting.Substitution.Unify
        Data.Rewriting.Rules
        Data.Rewriting.Rules.Rewrite
        Data.Rewriting.Rules.Ops
        Data.Rewriting.Context
        Data.Rewriting.Context.Type
        Data.Rewriting.Context.Ops
        Data.Rewriting.CriticalPair
        Data.Rewriting.CriticalPair.Type
        Data.Rewriting.CriticalPair.Ops
        Data.Rewriting.Datatype
        Data.Rewriting.Datatype.Ops
        Data.Rewriting.Datatype.Parse
        Data.Rewriting.Datatype.Pretty
        Data.Rewriting.Datatype.Type
        Data.Rewriting.Signature
        Data.Rewriting.Signature.Parse
        Data.Rewriting.Signature.Pretty
        Data.Rewriting.Signature.Type
    other-modules:
        Data.Rewriting.Utils
        Data.Rewriting.Utils.Parse
    build-depends:
        containers >= 0.3 && < 0.6,
        multiset >= 0.2 && < 0.3,
        parsec >= 3 && < 3.2,
        union-find-array >= 0.1 && < 0.2,
        array >= 0.3 && < 0.6,
        ansi-wl-pprint >= 0.6 && < 0.7,
        mtl >= 1.1 && < 2.3,
        base >= 4 && < 5
    extensions:
        TypeSynonymInstances
        BangPatterns
    other-extensions:
        FlexibleContexts,
        CPP,
        BangPatterns,
        TypeSynonymInstances,
        FlexibleInstances,
        StandaloneDeriving

test-suite test
    type:  exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        base >= 4 && < 5,
        term-rewriting,
        containers >= 0.3 && < 0.6,
        HUnit >= 1.2 && < 1.3,
        QuickCheck >= 2.6 && < 2.7

