name:          term-rewriting-ext
version:       0.1.3
stability:     experimental
author:        Martin Avanzini,
               Bertram Felgenhauer,
               Christian Sternagel,
               Ilya Epifanov,
               Manuel Schneckenreither
maintainer:    manuel.schneckenreither@uibk.ac.at,
               haskell-rewriting@informatik.uibk.ac.at
license:       MIT
license-file:  LICENSE
category:      Logic
synopsis:      Term Rewriting Library
description:
  Yet Another Term Rewriting Library.
  .
  This library provides basic data types and functionality for first order
  term rewriting.
  .
  This is an extenstion of the term-rewriting library, which can be found at
  http://github.com/haskell-rewriting/term-rewriting. It may be merged in to
  term-rewriting in the future.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
    type: git
    location: git://github.com/schnecki/term-rewriting

library
    hs-source-dirs:
        src
    exposed-modules:
        Data.Rewriting.Typed.Term
        Data.Rewriting.Typed.Term.Type
        Data.Rewriting.Typed.Term.Ops
        Data.Rewriting.Typed.Term.Parse
        Data.Rewriting.Typed.Term.Pretty
        Data.Rewriting.Typed.Pos
        Data.Rewriting.Typed.Problem
        Data.Rewriting.Typed.Problem.Type
        Data.Rewriting.Typed.Problem.Parse
        Data.Rewriting.Typed.Problem.Pretty
        Data.Rewriting.Typed.Rule
        Data.Rewriting.Typed.Rule.Type
        Data.Rewriting.Typed.Rule.Pretty
        Data.Rewriting.Typed.Rule.Ops
        Data.Rewriting.Typed.Substitution
        Data.Rewriting.Typed.Substitution.Type
        Data.Rewriting.Typed.Substitution.Parse
        Data.Rewriting.Typed.Substitution.Ops
        Data.Rewriting.Typed.Substitution.Pretty
        Data.Rewriting.Typed.Substitution.Match
        Data.Rewriting.Typed.Substitution.Unify
        Data.Rewriting.Typed.Rules
        Data.Rewriting.Typed.Rules.Rewrite
        Data.Rewriting.Typed.Rules.Ops
        Data.Rewriting.Typed.Context
        Data.Rewriting.Typed.Context.Type
        Data.Rewriting.Typed.Context.Ops
        Data.Rewriting.Typed.CriticalPair
        Data.Rewriting.Typed.CriticalPair.Type
        Data.Rewriting.Typed.CriticalPair.Ops
        Data.Rewriting.Typed.Datatype
        Data.Rewriting.Typed.Datatype.Ops
        Data.Rewriting.Typed.Datatype.Parse
        Data.Rewriting.Typed.Datatype.Pretty
        Data.Rewriting.Typed.Datatype.Type
        Data.Rewriting.Typed.Signature
        Data.Rewriting.Typed.Signature.Parse
        Data.Rewriting.Typed.Signature.Pretty
        Data.Rewriting.Typed.Signature.Type
    other-modules:
        Data.Rewriting.Typed.Utils
        Data.Rewriting.Typed.Utils.Parse
    build-depends:
        containers,
        multiset,
        parsec,
        union-find-array,
        array,
        ansi-wl-pprint >= 0.6,
        mtl,
        base
    extensions:
        TypeSynonymInstances
        BangPatterns
    other-extensions:
        FlexibleContexts,
        CPP,
        BangPatterns,
        TypeSynonymInstances,
        FlexibleInstances,
        StandaloneDeriving

